--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.514.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
     "react-paginate": "^8.3.0",
     "react-router-dom": "^7.6.1",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.1.8",
     "zustand": "^5.0.5"
   },
