--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.10.0",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.514.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
