--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_YXdha2UtdGVycmllci00LmNsZXJrLmFjY291bnRzLmRldiQ
 
-VITE_BACKEND_URL=http://localhost:8080
+VITE_BACKEND_URL=https://floreria-production.up.railway.app
