--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.10.0",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.7",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.514.0",
@@ -25,10 +26,12 @@
     "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-paginate": "^8.3.0",
     "react-router-dom": "^7.6.1",
     "recharts": "^2.15.3",
     "tailwindcss": "^4.1.8",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
